	- create rpmbuild/rpmquery/rpmverify/rpmsign symlinks.
	- fix: look for any/all dbapi when rebuilding.
	- link rpm2cpio dynamically since cpio is linked dynamically.
	- fix: uniqify dependency problems when printing (#14034).
	- fix: segfault on erase if filestates is missing in header (#14679).
	- fix: popt POST callbacks typo.
	- fix: -Va broken, make db cursors per-iterator, not per-dbi.

3.0.4 -> 3.0.5
	- configure.in fiddles for BSD systems (Patrick Schoo).
	- solaris2.6: avoid bsearch with empty dir list (Ric Klaren - klaren@cs.utwente.nl)
	- include RPM-GPG-KEY in file manifest.
	- Add ia64 and sparc64 changes.
	- rpm.spec: add per-platform sub-directories.
	- FreeBSD fixes (bero@redhat.com).
	- handle version 4 packaging as input.
	- builds against bzip2 1.0
	- fix: resurrect symlink unique'ifying property of finger prints.
	- fix: broken glob test with empty build directory (Geoff Keating).
        - fix: create per-platform directories correctly.
        - update brp-* scripts from rpm-4.0, enable in per-platform config.
        - alpha: add -mieee to default optflags.
	- add RPMTAG_OPTFLAGS, configured optflags when package was built.
	- add RPMTAG_DISTURL for rpmfind-like tools (content unknown yet).
	- teach brp-compress about /usr/info and /usr/share/info as well.
	- update macros.in from rpm-4.0 (w/o dbi configuration).
	- fix: don't expand macros in false branch of %if (kasal@suse.cz).
	- fix: macro expansion problem and clean up (#11484) (kasal@suse.cz).
	- uname on i370 has s390 as arch (#11456).
	- python: initdb binding (Dan Burcaw <dburcaw@terraplex.com>).
	- internalize --freshen (Gordon Messmer <yinyang@eburg.com>).
	- support for separate source/binary compression policy.
	- support for bzip payloads.
	- fix: payload compression tag not nul terminated.
	- identify package when install scriptlet fails (#12448).
	- remove (unused) RPMTAG_CAPABILITY.
	- remove (legacy) use of RPMTAG_{OBSOLETES,PROVIDES} internally.